# XinovaSU

./: .gitignore  Cargo.toml  README.md  ksud-e.yml  ksud.yml  repack_apk.py
.github/workflows/: build-lkm.yml  build-manager.yml  cleanup.yml  ddk-lkm.yml  ksud-extra.yml  ksud.yml  release.yml  sync-upstream.yml  xnsuinit.yml
docs/: README_CN.md
js/: package.json
kernel/: .gitignore  Kbuild  Kconfig  Makefile  selinux_stub.c
kernel/core/: init.c
kernel/feature/: adb_root.c  adb_root.h  kernel_spoof.c  kernel_spoof.h  kernel_umount.c  kernel_umount.h  net_isolate.c  net_isolate.h  path_hide.c  path_hide.h  selinux_hide.c  selinux_hide.h  sucompat.c  sucompat.h  sulog.c  sulog.h  vpn_hide.c  vpn_hide.h
kernel/hook/: lsm_hook.c  lsm_hook.h  patch_memory.h  setuid_hook.c  setuid_hook.h  syscall_event_bridge.c  syscall_event_bridge.h  syscall_hook.h  syscall_hook_manager.c  syscall_hook_manager.h  tp_marker.c  tp_marker.h
kernel/include/: arch.h  klog.h  xnsu.h
kernel/infra/: event_queue.c  event_queue.h  file_wrapper.c  file_wrapper.h  seccomp_cache.c  seccomp_cache.h  su_mount_ns.c  su_mount_ns.h  symbol_resolver.c  symbol_resolver.h
kernel/manager/: apk_sign.c  apk_sign.h  manager_identity.h  manager_observer.h  pkg_observer.c  (+2 more)
manager/: settings.gradle.kts
scripts/: check_theme_catalog.py  check_theme_decoration_guards.py  check_theme_surface_guards.py
uapi/: app_profile.h  feature.h  selinux.h  sulog.h  supercall.h  xnsu.h
zygisk-vpnhide/: .gitignore  CMakeLists.txt
zygisk-vpnhide/module/: module.prop
zygisk-vpnhide/src/: main.cpp  zygisk.hpp
(+384 files in other folders)
